Création d'un nouveau projet graphique en roue libre

--- a/Première interface graphique_BUATOIS/nbproject/project.properties
+++ b/Première interface graphique_BUATOIS/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Premi_re_interface_graphique_BUATOIS
-main.class=premi\u00e8re.pkginterface.graphique_buatois.Premi\u00e8reInterfaceGraphique_BUATOIS
+main.class=premi\u00e8re.pkginterface.graphique_buatois.Fen\u00eatrePrincipale
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
